# xsedar

./: CMakeLists.txt  README  auto.sh  justine_aes.gc  results.txt  saved_results.txt  simpleAND.gc
src/: CMakeLists.txt  full_test.cpp  setup_test.cpp  timed_test.cpp  xsedar.cpp  xsedar.h
src/justGarble/: CMakeLists.txt  aes.c  aes.h  aes_locl.h  aescircuits.c  check.c  check.h  circuits.c  circuits.h  common.h  dkcipher.c  dkcipher.h  eval.c  garble.c  garble.h  gates.c  gates.h  jgutil.c  jgutil.h  justGarble.h  scd.c  tinyaes.c  tinyaes.h  torabuild.c  torabuild.h
src/toralib/: CMakeLists.txt  dbg.h  simplesock.c  simplesock.h
